[package]
edition = "2018"
rust-version = "1.51"
name = "microbit-text"
version = "0.1.0"
authors = ["Matthew Woodcraft <matthew@woodcraft.me.uk>"]
description = "Scrolling text on a 5×5 (micro:bit) display"
readme = "README.md"
keywords = ["microbit"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattheww/microbit-text"

[dependencies]
tiny-led-matrix = "1.0.0"

